<?xml version="1.0" encoding="utf-8"?>
<resources>
  <string name="whats_new">Quoi de neuf pour cette version ?\n\n- Les images en wallpaper !\n
  - Mode portrait/paysage
    </string>
  <string name="welcome_text">Bienvenue !</string>
  <string name="app_name">Musiques-Incongrues</string>
  <string name="app_title">MUSIQUES INCONGRUES</string>
  <string name="version">0.10-BETA</string>
  <string name="radio_buffer">Sélectionnez un morceau dans la liste !</string>
  <string name="diaporama_buffer">Faites défiler ! Touchez pour zoomer/déplacer.
  </string>
  <string name="agenda_buffer">Qu\'allez vous faire ce mois-ci ?</string>
  <string name="thing_details_buffer">Des détails pour être plus précis !</string>
  <string name="television_buffer">Sélectionnez une vidéo dans la liste !</string>
  <string name="contacts_buffer">Des liens et des contacts.</string>
  <string name="releases_buffer">Les releases du forum depuis sa création</string>
  <string-array name="main_menu">
    <item>Radio_Ecouter du son incongru</item>
    <item>Diaporama_Des photos et images folles</item>
    <item>Discussions_Participer au forum (TODO)</item>
    <item>Télévision_Regarder la TVi sur son téléphone</item>
    <item>Ce soir on sort!_Que se passe t-il ce soir ? (TODO)</item>
    <item>Agenda_Les choses à faire ou ne pas faire</item>
    <item>Releases_Les dernières productions incongrues</item>
    <item>Membres_Qui parle/chuchotte/hurle sur Musiques-Incongrues ?
      (TODO)</item>
    <item>Contact et liens_Des liens pour aller plus loin ...</item>
  </string-array>
</resources>
