<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
  android:layout_width="fill_parent" android:layout_height="fill_parent"
  android:background="#ffffff" android:orientation="vertical">

  <LinearLayout android:id="@+id/actionBar"
    android:orientation="horizontal" android:layout_width="fill_parent"
    android:layout_height="wrap_content" android:background="@color/mi_pink"
    android:padding="5dip">

    <TextView android:id="@+id/title" android:layout_width="wrap_content"
      android:layout_height="wrap_content" android:text="@string/app_title"
      android:textColor="@color/android:white" android:gravity="center"
      android:layout_gravity="center_vertical" android:textSize="8pt"
      android:textStyle="bold" android:textColorHighlight="@color/light_mi_pink" />

    <LinearLayout android:id="@+id/actionBar"
      android:gravity="right" android:orientation="horizontal"
      android:layout_width="fill_parent" android:layout_height="wrap_content">

      <TextView android:id="@+id/version" android:layout_width="fill_parent"
        android:layout_height="wrap_content" android:text="@string/version"
        android:gravity="right" android:textColor="#ffffff" />

    </LinearLayout>
  </LinearLayout>

  <TextView android:id="@+id/diaporamaBufferText"
    android:layout_width="fill_parent" android:layout_height="wrap_content"
    android:text="@string/diaporama_buffer" android:paddingLeft="5dip"
    android:background="@color/light_mi_blue" android:textColor="#000000" />

  <Gallery android:id="@+id/diaporamaGallery"
    android:layout_width="fill_parent" android:layout_height="100px"
    android:background="@color/mi_yellow"
    android:persistentDrawingCache="all" />

  <ImageView android:id="@+id/diaporamaZoom"
    android:layout_width="fill_parent" android:layout_height="wrap_content"
    android:src="@drawable/zoom" android:scaleType="centerInside"
    android:layout_weight="4" />

  <LinearLayout android:layout_height="wrap_content"
    android:layout_width="fill_parent" android:orientation="horizontal"
    android:background="@color/mi_yellow" android:gravity="center"
    android:padding="2dip">

    <ImageButton android:id="@+id/diaporamaBarZoomOut"
      android:layout_width="wrap_content" android:layout_height="wrap_content"
      android:src="@color/zoomout" android:paddingLeft="5dip"
      android:background="@color/android:transparent" />

    <ImageButton android:id="@+id/diaporamaBarZoomIn"
      android:layout_width="wrap_content" android:layout_height="wrap_content"
      android:src="@color/zoomin" android:paddingLeft="5dip"
      android:background="@color/android:transparent" />

  </LinearLayout>

</LinearLayout>
